--- a/requirements.txt
+++ b/requirements.txt
@@ -1,187 +1,9 @@
-accelerate==0.29.2
-aiohttp==3.9.4
-aiosignal==1.3.1
-annotated-types==0.6.0
-antlr4-python3-runtime==4.9.3
-anyio==4.3.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-attrs==23.2.0
-azure-core==1.30.1
-azure-storage-blob==12.19.1
-backoff==2.2.1
-beautifulsoup4==4.12.3
-bitarray==2.9.2
-bitsandbytes==0.42.0
-catalogue==2.0.10
-certifi==2024.2.2
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-click @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_61srkg7e2e/croot/click_1698129815327/work
-colbert-ai==0.2.19
-coloredlogs==15.0.1
-contourpy==1.2.1
-cryptography==42.0.5
-cycler==0.12.1
-dataclasses-json==0.6.4
-dataclasses-json-speakeasy==0.5.11
-datasets==2.18.0
-Deprecated==1.2.14
-dill==0.3.8
-dirtyjson==1.0.8
-distro==1.9.0
-effdet==0.4.1
-emoji==2.11.0
-environs==9.5.0
-faiss-cpu==1.8.0
-fast-pytorch-kmeans==0.2.0.1
-filelock==3.13.4
-filetype==1.2.0
-Flask @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_b4a2svwk0s/croot/flask_1702980026964/work
-flatbuffers==24.3.25
-fonttools==4.51.0
-frozenlist==1.4.1
-fsspec==2024.2.0
-git-python==1.0.3
-gitdb==4.0.11
-GitPython==3.1.43
-greenlet==3.0.3
-grpcio==1.62.1
-grpcio-tools==1.62.1
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.22.2
-humanfriendly==10.0
-hyperframe==6.0.1
-idna==3.7
-iopath==0.1.10
-isodate==0.6.1
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-Jinja2 @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_7dognxkzoy/croot/jinja2_1706733627811/work
-joblib==1.4.0
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.4
-kiwisolver==1.4.5
+flask==2.2.5
 langchain==0.1.16
 langchain-community==0.0.33
 langchain-core==0.1.43
-langchain-experimental==0.0.57
-langchain-text-splitters==0.0.1
-langdetect==1.0.9
-langsmith==0.1.48
-layoutparser==0.3.4
-llama-index==0.10.29
-llama-index-agent-openai==0.2.2
-llama-index-cli==0.1.11
-llama-index-core==0.10.29
-llama-index-embeddings-openai==0.1.7
-llama-index-indices-managed-llama-cloud==0.1.5
-llama-index-legacy==0.9.48
-llama-index-llms-openai==0.1.15
-llama-index-multi-modal-llms-openai==0.1.5
-llama-index-program-openai==0.1.5
-llama-index-question-gen-openai==0.1.3
-llama-index-readers-file==0.1.19
-llama-index-readers-llama-parse==0.1.4
-llama-parse==0.4.1
-llamaindex-py-client==0.1.18
-lxml==5.2.1
-MarkupSafe @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_a84ni4pci8/croot/markupsafe_1704206002077/work
-marshmallow==3.21.1
-matplotlib==3.8.4
-minio==7.2.5
-mpmath==1.3.0
-multidict==6.0.5
-multiprocess==0.70.16
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.3
-ninja==1.11.1.1
-nltk==3.8.1
-numpy==1.26.4
-omegaconf==2.3.0
-onnx==1.16.0
-onnxruntime==1.15.1
 openai==1.19.0
-opencv-python==4.9.0.80
-orjson==3.10.1
-packaging==23.2
-pandas==2.2.2
-pdf2image==1.17.0
-pdfminer==20191125
-pdfminer.six==20231228
-pdfplumber==0.11.0
-pikepdf==8.15.1
-pillow==10.3.0
-pillow_heif==0.16.0
-portalocker==2.8.2
-protobuf==4.25.3
-psutil==5.9.8
-pyarrow==15.0.2
-pyarrow-hotfix==0.6
-pyclipper==1.3.0.post5
-pycocotools==2.0.7
-pycparser==2.22
-pycryptodome==3.20.0
-pydantic==2.7.0
-pydantic_core==2.18.1
-pynvml==11.5.0
-pyparsing==3.1.2
-pypdf==4.2.0
-pypdfium2==4.29.0
-pytesseract==0.3.10
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-iso639==2024.2.7
-python-magic==0.4.27
-python-multipart==0.0.9
-pytz==2024.1
-PyYAML==6.0.1
 qdrant-client==1.8.2
-RAGatouille==0.0.8.post2
-rapidfuzz==3.8.1
-rapidocr-onnxruntime==1.3.16
-regex==2023.12.25
-requests==2.31.0
-safetensors==0.4.3
-scikit-learn==1.4.2
-scipy==1.13.0
-sentence-transformers==2.6.1
-shapely==2.0.3
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.5
-SQLAlchemy==2.0.29
-srsly==2.4.8
-striprtf==0.0.26
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-threadpoolctl==3.4.0
-tiktoken==0.6.0
-timm==0.9.16
-tokenizers==0.15.2
+ragatouille==0.0.8.post2 
 torch==2.2.2
-torchvision==0.17.2
-tqdm==4.66.2
 transformers==4.39.3
-typing-inspect==0.9.0
-typing_extensions==4.11.0
-tzdata==2024.1
-ujson==5.9.0
-unstructured==0.13.2
-unstructured-client==0.18.0
-unstructured-inference==0.7.25
-unstructured.pytesseract==0.3.12
-urllib3==2.2.1
-voyager==2.0.6
-Werkzeug @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_94_079eho7/croot/werkzeug_1706210081645/work
-wrapt==1.16.0
-xxhash==3.4.1
-yarl==1.9.4
