--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,200 @@
-flask==2.2.5
-langchain==0.1.16
-langchain-community==0.0.33
-langchain-core==0.1.43
-openai==1.19.0
-qdrant-client==1.8.2
-ragatouille==0.0.8.post2 
-torch==2.2.2
-transformers==4.39.3
+accelerate==0.33.0
+aiofiles==23.2.1
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
+asyncer==0.0.7
+attrs==24.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.3
+bidict==0.23.1
+bitarray==2.9.2
+blinker==1.8.2
+catalogue==2.0.10
+certifi==2024.8.30
+cffi==1.17.0
+chainlit==1.1.404
+chardet==5.2.0
+charset-normalizer==3.3.2
+chevron==0.14.0
+click==8.1.7
+colbert-ai==0.2.19
+cryptography==43.0.0
+dataclasses-json==0.5.14
+datasets==2.21.0
+deepdiff==8.0.1
+Deprecated==1.2.14
+dill==0.3.8
+dirtyjson==1.0.8
+distro==1.9.0
+emoji==2.12.1
+faiss-cpu==1.8.0.post1
+fast-pytorch-kmeans==0.2.0.1
+fastapi==0.110.3
+filelock==3.15.4
+filetype==1.2.0
+Flask==3.0.3
+frozenlist==1.4.1
+fsspec==2024.6.1
+git-python==1.0.3
+gitdb==4.0.11
+GitPython==3.1.43
+googleapis-common-protos==1.65.0
+greenlet==3.0.3
+grpcio==1.66.1
+grpcio-tools==1.66.1
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.5
+httpx==0.27.2
+huggingface-hub==0.24.6
+hyperframe==6.0.1
+idna==3.8
+importlib_metadata==8.4.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jiter==0.5.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpath-python==1.0.6
+jsonpointer==3.0.0
+langchain==0.2.15
+langchain-community==0.2.15
+langchain-core==0.2.37
+langchain-huggingface==0.0.3
+langchain-qdrant==0.1.3
+langchain-text-splitters==0.2.2
+langdetect==1.0.9
+langsmith==0.1.108
+Lazify==0.4.0
+literalai==0.0.607
+llama-cloud==0.0.15
+llama-index==0.11.3
+llama-index-agent-openai==0.3.0
+llama-index-cli==0.3.0
+llama-index-core==0.11.3
+llama-index-embeddings-openai==0.2.3
+llama-index-indices-managed-llama-cloud==0.3.0
+llama-index-legacy==0.9.48.post3
+llama-index-llms-openai==0.2.0
+llama-index-multi-modal-llms-openai==0.2.0
+llama-index-program-openai==0.2.0
+llama-index-question-gen-openai==0.2.0
+llama-index-readers-file==0.2.0
+llama-index-readers-llama-parse==0.2.0
+llama-parse==0.5.1
+lxml==5.3.0
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.3
+ninja==1.11.1.1
+nltk==3.9.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.68
+nvidia-nvtx-cu12==12.1.105
+olefile==0.47
+onnx==1.16.2
+openai==1.43.0
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-exporter-otlp-proto-http==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+orderly-set==5.2.2
+orjson==3.10.7
+packaging==23.2
+pandas==2.2.2
+pdfminer.six==20240706
+pillow==10.4.0
+portalocker==2.10.1
+protobuf==4.25.4
+psutil==6.0.0
+pyarrow==17.0.0
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+PyJWT==2.9.0
+pynvml==11.5.3
+pypdf==4.3.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-engineio==4.9.1
+python-iso639==2024.4.27
+python-magic==0.4.27
+python-multipart==0.0.9
+python-oxmsg==0.0.1
+python-socketio==5.11.4
+pytz==2024.1
+PyYAML==6.0.2
+qdrant-client==1.11.1
+RAGatouille==0.0.8.post4
+rapidfuzz==3.9.6
+regex==2024.7.24
+requests==2.32.3
+requests-toolbelt==1.0.0
+safetensors==0.4.4
+scikit-learn==1.5.1
+scipy==1.14.1
+sentence-transformers==2.7.0
+setuptools==72.1.0
+simple-websocket==1.0.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.32
+srsly==2.4.8
+starlette==0.37.2
+striprtf==0.0.26
+sympy==1.13.2
+syncer==2.0.3
+tabulate==0.9.0
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tiktoken==0.7.0
+tokenizers==0.19.1
+tomli==2.0.1
+torch==2.4.0
+tqdm==4.66.5
+transformers==4.44.2
+triton==3.0.0
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+unstructured==0.15.9
+unstructured-client==0.25.6
+uptrace==1.26.0
+urllib3==2.2.2
+uvicorn==0.25.0
+voyager==2.0.9
+watchfiles==0.20.0
+Werkzeug==3.0.4
+wheel==0.43.0
+wrapt==1.16.0
+wsproto==1.2.0
+xxhash==3.5.0
+yarl==1.9.7
+zipp==3.20.1
