--- a/src/config.ini
+++ b/src/config.ini
@@ -1,7 +1,7 @@
 [VECTOR_DB]
-host = 10.0.0.177
+host = 10.3.0.40
 port = 6333
-collection = test
+collection = my_documents
 
 [EMBEDDINGS]
 model_name = BAAI/bge-large-en
@@ -12,7 +12,7 @@ device = cuda
 normalize_embeddings = False
 
 [VLLM]
-host = 10.0.0.177
+host = 10.3.0.40
 port = 8000
 model_name = TheBloke/Vigostral-7B-Chat-AWQ
 
