--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,39 @@
-accelerate==0.33.0
 aiofiles==23.2.1
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
 asyncer==0.0.7
 attrs==24.2.0
-backoff==2.2.1
 beautifulsoup4==4.12.3
 bidict==0.23.1
 bitarray==2.9.2
 blinker==1.8.2
+cachetools==5.5.0
 catalogue==2.0.10
 certifi==2024.8.30
-cffi==1.17.0
-chainlit==1.1.404
-chardet==5.2.0
+chainlit==1.2.0
 charset-normalizer==3.3.2
 chevron==0.14.0
 click==8.1.7
 colbert-ai==0.2.19
-cryptography==43.0.0
-dataclasses-json==0.5.14
-datasets==2.21.0
-deepdiff==8.0.1
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+dataclasses-json==0.6.7
+datasets==3.0.0
+debugpy @ file:///work/perseverance-python-buildout/croot/debugpy_1698884710808/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
 Deprecated==1.2.14
 dill==0.3.8
 dirtyjson==1.0.8
 distro==1.9.0
-emoji==2.12.1
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
 faiss-cpu==1.8.0.post1
 fast-pytorch-kmeans==0.2.0.1
-fastapi==0.110.3
-filelock==3.15.4
+fastapi==0.112.4
+filelock==3.16.0
 filetype==1.2.0
 Flask==3.0.3
 frozenlist==1.4.1
@@ -42,7 +42,7 @@ git-python==1.0.3
 gitdb==4.0.11
 GitPython==3.1.43
 googleapis-common-protos==1.65.0
-greenlet==3.0.3
+greenlet==3.1.0
 grpcio==1.66.1
 grpcio-tools==1.66.1
 h11==0.14.0
@@ -50,50 +50,54 @@ h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.5
 httpx==0.27.2
-huggingface-hub==0.24.6
+huggingface-hub==0.24.7
 hyperframe==6.0.1
-idna==3.8
+idna==3.10
 importlib_metadata==8.4.0
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1725050136642/work
 itsdangerous==2.2.0
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
 Jinja2==3.1.4
 jiter==0.5.0
 joblib==1.4.2
 jsonpatch==1.33
-jsonpath-python==1.0.6
 jsonpointer==3.0.0
-langchain==0.2.15
-langchain-community==0.2.15
-langchain-core==0.2.37
-langchain-huggingface==0.0.3
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
+jupyter_core @ file:///croot/jupyter_core_1718818295206/work
+langchain==0.2.16
+langchain-community==0.2.17
+langchain-core==0.2.40
+langchain-openai==0.1.25
 langchain-qdrant==0.1.3
-langchain-text-splitters==0.2.2
-langdetect==1.0.9
-langsmith==0.1.108
+langchain-text-splitters==0.2.4
+langsmith==0.1.120
 Lazify==0.4.0
 literalai==0.0.607
-llama-cloud==0.0.15
-llama-index==0.11.3
-llama-index-agent-openai==0.3.0
-llama-index-cli==0.3.0
-llama-index-core==0.11.3
-llama-index-embeddings-openai==0.2.3
-llama-index-indices-managed-llama-cloud==0.3.0
+llama-cloud==0.0.17
+llama-index==0.11.9
+llama-index-agent-openai==0.3.1
+llama-index-cli==0.3.1
+llama-index-core==0.11.9
+llama-index-embeddings-openai==0.2.5
+llama-index-indices-managed-llama-cloud==0.3.1
 llama-index-legacy==0.9.48.post3
-llama-index-llms-openai==0.2.0
-llama-index-multi-modal-llms-openai==0.2.0
+llama-index-llms-openai==0.2.7
+llama-index-multi-modal-llms-openai==0.2.1
 llama-index-program-openai==0.2.0
 llama-index-question-gen-openai==0.2.0
-llama-index-readers-file==0.2.0
-llama-index-readers-llama-parse==0.2.0
-llama-parse==0.5.1
-lxml==5.3.0
+llama-index-readers-file==0.2.1
+llama-index-readers-llama-parse==0.3.0
+llama-parse==0.5.5
+loguru==0.7.2
 MarkupSafe==2.1.5
 marshmallow==3.22.0
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
 mpmath==1.3.0
-multidict==6.0.5
+multidict==6.1.0
 multiprocess==0.70.16
 mypy-extensions==1.0.0
-nest-asyncio==1.6.0
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
 networkx==3.3
 ninja==1.11.1.1
 nltk==3.9.1
@@ -110,9 +114,8 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.6.68
 nvidia-nvtx-cu12==12.1.105
-olefile==0.47
 onnx==1.16.2
-openai==1.43.0
+openai==1.45.0
 opentelemetry-api==1.27.0
 opentelemetry-exporter-otlp==1.27.0
 opentelemetry-exporter-otlp-proto-common==1.27.0
@@ -122,79 +125,82 @@ opentelemetry-instrumentation==0.48b0
 opentelemetry-proto==1.27.0
 opentelemetry-sdk==1.27.0
 opentelemetry-semantic-conventions==0.48b0
-orderly-set==5.2.2
 orjson==3.10.7
 packaging==23.2
 pandas==2.2.2
-pdfminer.six==20240706
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
 pillow==10.4.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726315398971/work
 portalocker==2.10.1
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
 protobuf==4.25.4
-psutil==6.0.0
+psutil @ file:///work/perseverance-python-buildout/croot/psutil_1698863411559/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
 pyarrow==17.0.0
-pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
+pydantic==2.9.1
+pydantic-settings==2.5.2
+pydantic_core==2.23.3
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
 PyJWT==2.9.0
 pynvml==11.5.3
 pypdf==4.3.1
-python-dateutil==2.9.0.post0
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
 python-dotenv==1.0.1
 python-engineio==4.9.1
-python-iso639==2024.4.27
-python-magic==0.4.27
 python-multipart==0.0.9
-python-oxmsg==0.0.1
 python-socketio==5.11.4
-pytz==2024.1
+pytz==2024.2
 PyYAML==6.0.2
+pyzmq @ file:///croot/pyzmq_1705605076900/work
 qdrant-client==1.11.1
 RAGatouille==0.0.8.post4
-rapidfuzz==3.9.6
-regex==2024.7.24
+regex==2024.9.11
 requests==2.32.3
-requests-toolbelt==1.0.0
-safetensors==0.4.4
-scikit-learn==1.5.1
+safetensors==0.4.5
+scikit-learn==1.5.2
 scipy==1.14.1
 sentence-transformers==2.7.0
 setuptools==72.1.0
 simple-websocket==1.0.0
-six==1.16.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
-SQLAlchemy==2.0.32
+SQLAlchemy==2.0.34
 srsly==2.4.8
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
 starlette==0.37.2
 striprtf==0.0.26
 sympy==1.13.2
 syncer==2.0.3
-tabulate==0.9.0
 tenacity==8.5.0
 threadpoolctl==3.5.0
 tiktoken==0.7.0
 tokenizers==0.19.1
 tomli==2.0.1
-torch==2.4.0
+torch==2.4.1
+tornado @ file:///croot/tornado_1718740109488/work
 tqdm==4.66.5
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
 transformers==4.44.2
 triton==3.0.0
 typing-inspect==0.9.0
-typing_extensions==4.12.2
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
 tzdata==2024.1
 ujson==5.10.0
-unstructured==0.15.9
-unstructured-client==0.25.6
 uptrace==1.26.0
-urllib3==2.2.2
+urllib3==2.2.3
 uvicorn==0.25.0
 voyager==2.0.9
 watchfiles==0.20.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
 Werkzeug==3.0.4
-wheel==0.43.0
+wheel==0.44.0
 wrapt==1.16.0
 wsproto==1.2.0
 xxhash==3.5.0
-yarl==1.9.7
-zipp==3.20.1
+yarl==1.11.1
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1726248574750/work
