--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,7 @@ name = thenlper/gte-base
 [llm]    
 base_url = https://chat.ai.linagora.exaion.com/v1/
 name = meta-llama-31-8b-it
+;Maximum number of tokens to generate.
 max_tokens = 1000
 
 [vectordb]
