integrate chunker args in config.ini file

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,12 @@ port = 6333
 connector_name = qdrant
 collection_name = docs_vdb
 
+[chunker]
+; name can be recursive_splitter or semantic_splitter
+name = semantic_splitter
+;chunk_size: 1000, chunk_overlap: 100 are args for recursive
+min_chunk_size = 1000
+
 [retriever]
 ; type can be single, hyde, multiQuery
 type = single
