--- a/config.ini
+++ b/config.ini
@@ -6,39 +6,42 @@ name = thenlper/gte-base
 base_url = https://chat.ai.linagora.exaion.com/v1/
 name = meta-llama-31-8b-it
 ;Maximum number of tokens to generate.
-max_tokens = 1000
+max_tokens = 1024
+temperature = 0.3
 
 [vectordb]
 host = localhost
 port = 6333
 connector_name = qdrant
 collection_name = docs_vdb
+hybrid_mode = True
 
 [chunker]
 ; name can be recursive_splitter or semantic_splitter
 name = semantic_splitter
-;chunk_size: 1000, chunk_overlap: 100 are args for recursive
+;chunk_size = 1000
+;chunk_overlap = 100
 min_chunk_size = 1000
 
 [retriever]
 ; type can be single, hyde, multiQuery
 type = single
 criteria = similarity
-top_k = 5
+top_k = 6
 ; extra_params is essentially for multiQuery retriever
-extra_params = {k_queries: 3}
+extra_params = {'k_queries': 3}
 
 [reranker]
 ;if you don't want use the reranker, don't put any value
 model_name = colbert-ir/colbertv2.0
 ;number of docs to return after reranking
-top_k = 6 
+top_k = 5
 
 [rag]
 ; mode can be 'SimpleRag' or 'ChatBotRag'
 mode = ChatBotRag
-sys_template = rag_sys_prompt_template.txt
-# chat_history_depth is use in case of 'ChatBotRag'
+; sys_template = rag_sys_prompt_template.txt
+; chat_history_depth is use in case of 'ChatBotRag'
 chat_history_depth = 4
 
 [verbose]
