--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,12 @@ CR.md
 __pycache__/
 **/__pycache__/
 
+**/*upload_dir
+
 # Ignore some local files
 *.pdf
 *.ipynb
+**/*.ipynb
 CR.md
 
 # Ignore Python bytecode files
