--- a/config.ini
+++ b/config.ini
@@ -27,7 +27,7 @@ min_chunk_size = 1000
 ; type can be single, hyde, multiQuery
 type = single
 criteria = similarity
-top_k = 6
+top_k = 5
 ; extra_params is essentially for multiQuery retriever
 extra_params = {'k_queries': 3}
 
@@ -47,3 +47,7 @@ chat_history_depth = 4
 [verbose]
 verbose = True
 level = INFO
+
+[prompt]
+rag_sys_pmpt = rag_sys_prompt_template.txt
+context_pmpt_tmpl = contextualize_prompt_template.txt
