--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,19 @@
 [embedder]
 type = huggingface
-name = thenlper/gte-base
+name = HIT-TMG/KaLM-embedding-multilingual-mini-v1
+; powerful multilingual model => More language => token's decomposed heavily => More shit to embed => HIT-TMG/KaLM-embedding-multilingual-mini-v1(More params) holds better than Alibaba 
+; Alibaba-NLP/gte-multilingual-base
+; jinaai/jina-embeddings-v3
+; Alibaba-NLP/gte-Qwen2-1.5B-instruct
+; HIT-TMG/KaLM-embedding-multilingual-mini-v1
+; thenlper/gte-base
 
 [llm]    
 base_url = https://chat.ai.linagora.exaion.com/v1/
 name = meta-llama-31-8b-it
 ;Maximum number of tokens to generate.
 max_tokens = 1024
-temperature = 0.3
+temperature = 0.0
 
 [vectordb]
 host = localhost
@@ -22,10 +28,11 @@ name = semantic_splitter
 ;chunk_size = 1000
 ;chunk_overlap = 100
 min_chunk_size = 1000
+breakpoint_threshold_amount = 95
 
 [retriever]
 ; type can be single, hyde, multiQuery
-type = single
+type = multiQuery
 criteria = similarity
 top_k = 5
 ; extra_params is essentially for multiQuery retriever
@@ -33,7 +40,8 @@ extra_params = {'k_queries': 3}
 
 [reranker]
 ;if you don't want use the reranker, don't put any value
-model_name = colbert-ir/colbertv2.0
+;colbert-ir/colbertv2.0
+model_name = jinaai/jina-colbert-v2 
 ;number of docs to return after reranking
 top_k = 5
 
