--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,98 @@
+aiofile==3.9.0
 aiofiles==23.2.1
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.8
+aiopath==0.7.7
 aiosignal==1.3.1
+alembic==1.13.3
 annotated-types==0.7.0
-anyio==4.4.0
+antlr4-python3-runtime==4.9.3
+anyio==4.6.0
+asteroid-filterbanks==0.4.0
 asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
 asyncer==0.0.7
 attrs==24.2.0
+audioread==3.0.1
+av==11.0.0
+backoff==2.2.1
 beautifulsoup4==4.12.3
 bidict==0.23.1
 bitarray==2.9.2
 blinker==1.8.2
 cachetools==5.5.0
+caio==0.9.17
 catalogue==2.0.10
 certifi==2024.8.30
-chainlit==1.2.0
+cffi==1.17.1
+chainlit==1.3.1
+chardet==5.2.0
 charset-normalizer==3.3.2
 chevron==0.14.0
 click==8.1.7
 colbert-ai==0.2.19
+coloredlogs==15.0.1
+colorlog==6.8.2
 comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+contourpy==1.3.0
+cryptography==43.0.1
+ctranslate2==4.4.0
+cycler==0.12.1
 dataclasses-json==0.6.7
-datasets==3.0.0
+datasets==3.0.1
 debugpy @ file:///work/perseverance-python-buildout/croot/debugpy_1698884710808/work
 decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+deepdiff==8.0.1
 Deprecated==1.2.14
 dill==0.3.8
 dirtyjson==1.0.8
 distro==1.9.0
+dnspython==2.6.1
+docopt==0.6.2
+effdet==0.4.1
+einops==0.8.0
+email_validator==2.2.0
+emoji==2.14.0
+eval_type_backport==0.2.0
 exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
 executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
 faiss-cpu==1.8.0.post1
 fast-pytorch-kmeans==0.2.0.1
 fastapi==0.112.4
-filelock==3.16.0
+fastapi-cli==0.0.5
+fastembed==0.3.6
+fastembed-gpu==0.3.6
+faster-whisper==1.0.1
+filelock==3.16.1
 filetype==1.2.0
 Flask==3.0.3
+flatbuffers==24.3.25
+fonttools==4.54.1
 frozenlist==1.4.1
 fsspec==2024.6.1
 git-python==1.0.3
 gitdb==4.0.11
 GitPython==3.1.43
+google-api-core==2.21.0
+google-auth==2.35.0
+google-cloud-vision==3.7.4
 googleapis-common-protos==1.65.0
-greenlet==3.1.0
-grpcio==1.66.1
-grpcio-tools==1.66.1
+greenlet==3.1.1
+grpcio==1.66.2
+grpcio-status==1.66.2
+grpcio-tools==1.66.2
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.5
+httptools==0.6.1
 httpx==0.27.2
-huggingface-hub==0.24.7
+huggingface-hub==0.26.2
+humanfriendly==10.0
 hyperframe==6.0.1
+HyperPyYAML==1.2.2
 idna==3.10
 importlib_metadata==8.4.0
+iopath==0.1.10
 ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
 ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1725050136642/work
 itsdangerous==2.2.0
@@ -62,38 +101,59 @@ Jinja2==3.1.4
 jiter==0.5.0
 joblib==1.4.2
 jsonpatch==1.33
+jsonpath-python==1.0.6
 jsonpointer==3.0.0
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
-jupyter_core @ file:///croot/jupyter_core_1718818295206/work
-langchain==0.2.16
-langchain-community==0.2.17
-langchain-core==0.2.40
-langchain-openai==0.1.25
-langchain-qdrant==0.1.3
-langchain-text-splitters==0.2.4
-langsmith==0.1.120
+julius==0.2.7
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+kiwisolver==1.4.7
+langchain==0.3.1
+langchain-community==0.3.1
+langchain-core==0.3.13
+langchain-experimental==0.3.2
+langchain-huggingface==0.1.1
+langchain-openai==0.2.1
+langchain-qdrant==0.1.4
+langchain-text-splitters==0.3.0
+langchain-unstructured==0.1.5
+langdetect==1.0.9
+langsmith==0.1.129
+layoutparser==0.3.4
 Lazify==0.4.0
-literalai==0.0.607
-llama-cloud==0.0.17
-llama-index==0.11.9
-llama-index-agent-openai==0.3.1
+lazy_loader==0.4
+librosa==0.10.2.post1
+lightning==2.4.0
+lightning-utilities==0.11.8
+literalai==0.0.623
+llama-cloud==0.1.0
+llama-index==0.11.14
+llama-index-agent-openai==0.3.4
 llama-index-cli==0.3.1
-llama-index-core==0.11.9
+llama-index-core==0.11.14
 llama-index-embeddings-openai==0.2.5
-llama-index-indices-managed-llama-cloud==0.3.1
+llama-index-indices-managed-llama-cloud==0.4.0
 llama-index-legacy==0.9.48.post3
-llama-index-llms-openai==0.2.7
+llama-index-llms-langchain==0.4.1
+llama-index-llms-openai==0.2.9
 llama-index-multi-modal-llms-openai==0.2.1
 llama-index-program-openai==0.2.0
 llama-index-question-gen-openai==0.2.0
-llama-index-readers-file==0.2.1
+llama-index-readers-file==0.2.2
 llama-index-readers-llama-parse==0.3.0
-llama-parse==0.5.5
+llama-parse==0.5.6
+llvmlite==0.43.0
 loguru==0.7.2
+lxml==5.3.0
+Mako==1.3.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.22.0
+matplotlib==3.9.2
 matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+mdurl==0.1.2
+mmh3==4.1.0
 mpmath==1.3.0
+msgpack==1.1.0
 multidict==6.1.0
 multiprocess==0.70.16
 mypy-extensions==1.0.0
@@ -101,21 +161,27 @@ nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_17
 networkx==3.3
 ninja==1.11.1.1
 nltk==3.9.1
+numba==0.60.0
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
 nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==9.1.0.70
+nvidia-cudnn-cu12==8.9.2.26
 nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
+nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.6.68
 nvidia-nvtx-cu12==12.1.105
+olefile==0.47
+omegaconf==2.3.0
 onnx==1.16.2
-openai==1.45.0
+onnxruntime==1.19.2
+onnxruntime-gpu==1.19.2
+openai==1.50.2
+opencv-python==4.10.0.84
 opentelemetry-api==1.27.0
 opentelemetry-exporter-otlp==1.27.0
 opentelemetry-exporter-otlp-proto-common==1.27.0
@@ -125,82 +191,151 @@ opentelemetry-instrumentation==0.48b0
 opentelemetry-proto==1.27.0
 opentelemetry-sdk==1.27.0
 opentelemetry-semantic-conventions==0.48b0
+optuna==4.0.0
+orderly-set==5.2.2
 orjson==3.10.7
 packaging==23.2
-pandas==2.2.2
+pandas==2.2.3
 parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+pdf2image==1.17.0
+pdfminer.six==20231228
+pdfplumber==0.11.4
 pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+pi_heif==0.18.0
 pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pikepdf==9.3.0
 pillow==10.4.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726315398971/work
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
+pooch==1.8.2
 portalocker==2.10.1
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
-protobuf==4.25.4
+primePy==1.3
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
+proto-plus==1.24.0
+protobuf==4.25.5
 psutil @ file:///work/perseverance-python-buildout/croot/psutil_1698863411559/work
 ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
 pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+pyannote.audio==3.1.1
+pyannote.core==5.0.0
+pyannote.database==5.1.0
+pyannote.metrics==3.2.1
+pyannote.pipeline==3.0.1
 pyarrow==17.0.0
-pydantic==2.9.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pyclipper==1.3.0.post5
+pycocotools==2.0.8
+pycparser==2.22
+pydantic==2.9.2
 pydantic-settings==2.5.2
-pydantic_core==2.23.3
+pydantic_core==2.23.4
+pydub==0.25.1
 Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
 PyJWT==2.9.0
+PyMuPDF==1.24.11
+pymupdf4llm==0.0.17
 pynvml==11.5.3
+pypandoc @ file:///home/conda/feedstock_root/build_artifacts/pypandoc_1728383440030/work
+pyparsing==3.1.4
 pypdf==4.3.1
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+pypdfium2==4.30.0
+PyStemmer==2.2.0.3
+pytesseract==0.3.13
+python-dateutil==2.8.2
+python-docx==1.1.2
 python-dotenv==1.0.1
 python-engineio==4.9.1
+python-iso639==2024.4.27
+python-magic==0.4.27
 python-multipart==0.0.9
+python-oxmsg==0.0.1
+python-pptx==1.0.2
 python-socketio==5.11.4
+pytorch-lightning==2.4.0
+pytorch-metric-learning==2.6.0
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq @ file:///croot/pyzmq_1705605076900/work
-qdrant-client==1.11.1
+qdrant-client==1.11.3
 RAGatouille==0.0.8.post4
+RapidFuzz==3.10.0
+rapidocr-onnxruntime==1.3.25
 regex==2024.9.11
 requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.0
+rsa==4.9
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
 safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
-sentence-transformers==2.7.0
-setuptools==72.1.0
+semver==3.0.2
+sentence-transformers==3.2.1
+sentencepiece==0.2.0
+setuptools==75.1.0
+shapely==2.0.6
+shellingham==1.5.4
 simple-websocket==1.0.0
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 smmap==5.0.1
 sniffio==1.3.1
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+soundfile==0.12.1
 soupsieve==2.6
-SQLAlchemy==2.0.34
+soxr==0.5.0.post1
+speechbrain==1.0.1
+SQLAlchemy==2.0.35
 srsly==2.4.8
 stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
 starlette==0.37.2
 striprtf==0.0.26
-sympy==1.13.2
+sympy==1.13.3
 syncer==2.0.3
+tabulate==0.9.0
 tenacity==8.5.0
+tensorboardX==2.6.2.2
+tesseract==0.1.3
 threadpoolctl==3.5.0
 tiktoken==0.7.0
-tokenizers==0.19.1
+timm==1.0.9
+tokenizers==0.20.1
 tomli==2.0.1
-torch==2.4.1
+torch==2.2.2+cu121
+torch-audiomentations==0.11.1
+torch_pitch_shift==1.2.5
+torchaudio==2.2.2+cu121
+torchmetrics==1.4.3
+torchvision==0.17.2+cu121
 tornado @ file:///croot/tornado_1718740109488/work
 tqdm==4.66.5
 traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-transformers==4.44.2
+transformers==4.46.1
 triton==3.0.0
+typer==0.12.5
 typing-inspect==0.9.0
 typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
-tzdata==2024.1
+tzdata==2024.2
 ujson==5.10.0
+unstructured==0.15.14
+unstructured-client==0.25.9
+unstructured-inference==0.7.36
+unstructured.pytesseract==0.3.13
 uptrace==1.26.0
 urllib3==2.2.3
 uvicorn==0.25.0
+uvloop==0.20.0
 voyager==2.0.9
 watchfiles==0.20.0
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+websockets==13.1
 Werkzeug==3.0.4
 wheel==0.44.0
+whisperx==3.1.5
 wrapt==1.16.0
 wsproto==1.2.0
+XlsxWriter==3.2.0
 xxhash==3.5.0
-yarl==1.11.1
+yarl==1.13.1
 zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1726248574750/work
