add context to chunks: started

--- a/config.ini
+++ b/config.ini
@@ -19,7 +19,7 @@ temperature = 0.0
 host = localhost
 port = 6333
 connector_name = qdrant
-collection_name = docs_vdb
+collection_name = docs_vdb2
 hybrid_mode = True
 
 [chunker]
@@ -29,12 +29,13 @@ name = semantic_splitter
 ;chunk_overlap = 100
 min_chunk_size = 1000
 breakpoint_threshold_amount = 95
+contextual_retrieval = False
 
 [retriever]
 ; type can be single, hyde, multiQuery
 type = multiQuery
 criteria = similarity
-top_k = 6
+top_k = 10
 ; extra_params is essentially for multiQuery retriever
 extra_params = {'k_queries': 3}
 
