--- a/config.ini
+++ b/config.ini
@@ -19,7 +19,7 @@ temperature = 0.0
 host = localhost
 port = 6333
 connector_name = qdrant
-collection_name = docs_vdb2
+collection_name = vdb95_no_cont
 hybrid_mode = True
 
 [chunker]
@@ -29,7 +29,7 @@ name = semantic_splitter
 ;chunk_overlap = 100
 min_chunk_size = 1000
 breakpoint_threshold_amount = 95
-contextual_retrieval = False
+contextual_retrieval = True
 
 [retriever]
 ; type can be single, hyde, multiQuery
@@ -44,7 +44,7 @@ extra_params = {'k_queries': 3}
 ;colbert-ir/colbertv2.0
 model_name = jinaai/jina-colbert-v2 
 ;number of docs to return after reranking
-top_k = 5
+top_k = 6
 
 [rag]
 ; mode can be 'SimpleRag' or 'ChatBotRag'
