--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [embedder]
 type = huggingface
 name = HIT-TMG/KaLM-embedding-multilingual-mini-v1
-; powerful multilingual model => More language => token's decomposed heavily => More shit to embed => HIT-TMG/KaLM-embedding-multilingual-mini-v1(More params) holds better than Alibaba 
+; powerful multilingual model => More language => token's decomposed heavily => More tokens to embed => HIT-TMG/KaLM-embedding-multilingual-mini-v1(More params) holds better than Alibaba 
 ; Alibaba-NLP/gte-multilingual-base
 ; jinaai/jina-embeddings-v3
 ; Alibaba-NLP/gte-Qwen2-1.5B-instruct
@@ -19,7 +19,7 @@ temperature = 0.0
 host = localhost
 port = 6333
 connector_name = qdrant
-collection_name = vdb95_no_cont
+collection_name = vdb95
 hybrid_mode = True
 
 [chunker]
