--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
+accelerate==1.1.1
 aiofile==3.9.0
 aiofiles==23.2.1
 aiohappyeyeballs==2.4.3
-aiohttp==3.10.8
+aiohttp==3.10.10
 aiopath==0.7.7
 aiosignal==1.3.1
-alembic==1.13.3
+alembic==1.14.0
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-anyio==4.6.0
+anyio==4.6.2.post1
 asteroid-filterbanks==0.4.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
 asyncer==0.0.7
 attrs==24.2.0
 audioread==3.0.1
@@ -17,139 +17,114 @@ av==11.0.0
 backoff==2.2.1
 beautifulsoup4==4.12.3
 bidict==0.23.1
-bitarray==2.9.2
-blinker==1.8.2
-cachetools==5.5.0
+bitarray==3.0.0
+blinker==1.9.0
 caio==0.9.17
 catalogue==2.0.10
 certifi==2024.8.30
 cffi==1.17.1
-chainlit==1.3.1
+chainlit==1.3.2
 chardet==5.2.0
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
 chevron==0.14.0
 click==8.1.7
 colbert-ai==0.2.19
 coloredlogs==15.0.1
-colorlog==6.8.2
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+colorlog==6.9.0
 contourpy==1.3.0
-cryptography==43.0.1
-ctranslate2==4.4.0
+cryptography==43.0.3
+ctranslate2==4.5.0
 cycler==0.12.1
 dataclasses-json==0.6.7
-datasets==3.0.1
-debugpy @ file:///work/perseverance-python-buildout/croot/debugpy_1698884710808/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-deepdiff==8.0.1
+datasets==3.1.0
+decorator==5.1.1
 Deprecated==1.2.14
 dill==0.3.8
 dirtyjson==1.0.8
 distro==1.9.0
-dnspython==2.6.1
 docopt==0.6.2
-effdet==0.4.1
 einops==0.8.0
-email_validator==2.2.0
 emoji==2.14.0
 eval_type_backport==0.2.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
-faiss-cpu==1.8.0.post1
+faiss-cpu==1.9.0
 fast-pytorch-kmeans==0.2.0.1
-fastapi==0.112.4
-fastapi-cli==0.0.5
-fastembed==0.3.6
-fastembed-gpu==0.3.6
+fastapi==0.115.4
+fastembed-gpu==0.4.1
 faster-whisper==1.0.1
 filelock==3.16.1
 filetype==1.2.0
 Flask==3.0.3
 flatbuffers==24.3.25
 fonttools==4.54.1
-frozenlist==1.4.1
-fsspec==2024.6.1
+frozenlist==1.5.0
+fsspec==2024.9.0
 git-python==1.0.3
 gitdb==4.0.11
 GitPython==3.1.43
-google-api-core==2.21.0
-google-auth==2.35.0
-google-cloud-vision==3.7.4
 googleapis-common-protos==1.65.0
 greenlet==3.1.1
-grpcio==1.66.2
-grpcio-status==1.66.2
-grpcio-tools==1.66.2
+grpcio==1.67.1
+grpcio-tools==1.67.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
-httpcore==1.0.5
-httptools==0.6.1
+html5lib==1.1
+httpcore==1.0.6
 httpx==0.27.2
+httpx-sse==0.4.0
 huggingface-hub==0.26.2
 humanfriendly==10.0
 hyperframe==6.0.1
 HyperPyYAML==1.2.2
 idna==3.10
-importlib_metadata==8.4.0
-iopath==0.1.10
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1725050136642/work
+importlib_metadata==8.5.0
 itsdangerous==2.2.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
 Jinja2==3.1.4
-jiter==0.5.0
+jiter==0.7.0
 joblib==1.4.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==3.0.0
 julius==0.2.7
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
 kiwisolver==1.4.7
-langchain==0.3.1
-langchain-community==0.3.1
-langchain-core==0.3.13
-langchain-experimental==0.3.2
-langchain-huggingface==0.1.1
-langchain-openai==0.2.1
-langchain-qdrant==0.1.4
-langchain-text-splitters==0.3.0
-langchain-unstructured==0.1.5
+langchain==0.3.7
+langchain-community==0.3.5
+langchain-core==0.3.15
+langchain-experimental==0.3.3
+langchain-openai==0.2.6
+langchain-qdrant==0.2.0
+langchain-text-splitters==0.3.2
 langdetect==1.0.9
-langsmith==0.1.129
-layoutparser==0.3.4
+langsmith==0.1.142
 Lazify==0.4.0
 lazy_loader==0.4
 librosa==0.10.2.post1
 lightning==2.4.0
 lightning-utilities==0.11.8
 literalai==0.0.623
-llama-cloud==0.1.0
-llama-index==0.11.14
+llama-cloud==0.1.4
+llama-index==0.11.22
 llama-index-agent-openai==0.3.4
 llama-index-cli==0.3.1
-llama-index-core==0.11.14
+llama-index-core==0.11.22
 llama-index-embeddings-openai==0.2.5
 llama-index-indices-managed-llama-cloud==0.4.0
-llama-index-legacy==0.9.48.post3
-llama-index-llms-langchain==0.4.1
-llama-index-llms-openai==0.2.9
-llama-index-multi-modal-llms-openai==0.2.1
+llama-index-legacy==0.9.48.post4
+llama-index-llms-openai==0.2.16
+llama-index-multi-modal-llms-openai==0.2.3
 llama-index-program-openai==0.2.0
 llama-index-question-gen-openai==0.2.0
 llama-index-readers-file==0.2.2
 llama-index-readers-llama-parse==0.3.0
-llama-parse==0.5.6
+llama-parse==0.5.13
 llvmlite==0.43.0
 loguru==0.7.2
 lxml==5.3.0
-Mako==1.3.5
+Mako==1.3.6
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.22.0
+MarkupSafe==3.0.2
+marshmallow==3.23.1
 matplotlib==3.9.2
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
 mdurl==0.1.2
 mmh3==4.1.0
 mpmath==1.3.0
@@ -157,8 +132,8 @@ msgpack==1.1.0
 multidict==6.1.0
 multiprocess==0.70.16
 mypy-extensions==1.0.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-networkx==3.3
+nest-asyncio==1.6.0
+networkx==3.4.2
 ninja==1.11.1.1
 nltk==3.9.1
 numba==0.60.0
@@ -173,169 +148,134 @@ nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.6.68
+nvidia-nvjitlink-cu12==12.6.77
 nvidia-nvtx-cu12==12.1.105
 olefile==0.47
 omegaconf==2.3.0
-onnx==1.16.2
-onnxruntime==1.19.2
-onnxruntime-gpu==1.19.2
-openai==1.50.2
-opencv-python==4.10.0.84
-opentelemetry-api==1.27.0
-opentelemetry-exporter-otlp==1.27.0
-opentelemetry-exporter-otlp-proto-common==1.27.0
-opentelemetry-exporter-otlp-proto-grpc==1.27.0
-opentelemetry-exporter-otlp-proto-http==1.27.0
-opentelemetry-instrumentation==0.48b0
-opentelemetry-proto==1.27.0
-opentelemetry-sdk==1.27.0
-opentelemetry-semantic-conventions==0.48b0
+onnx==1.17.0
+onnxruntime==1.20.0
+onnxruntime-gpu==1.20.0
+openai==1.54.3
+opentelemetry-api==1.28.1
+opentelemetry-exporter-otlp==1.28.1
+opentelemetry-exporter-otlp-proto-common==1.28.1
+opentelemetry-exporter-otlp-proto-grpc==1.28.1
+opentelemetry-exporter-otlp-proto-http==1.28.1
+opentelemetry-instrumentation==0.49b1
+opentelemetry-proto==1.28.1
+opentelemetry-sdk==1.28.1
+opentelemetry-semantic-conventions==0.49b1
 optuna==4.0.0
-orderly-set==5.2.2
-orjson==3.10.7
+orjson==3.10.11
 packaging==23.2
 pandas==2.2.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pdf2image==1.17.0
-pdfminer.six==20231228
-pdfplumber==0.11.4
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pi_heif==0.18.0
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pikepdf==9.3.0
 pillow==10.4.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
+platformdirs==4.3.6
 pooch==1.8.2
 portalocker==2.10.1
 primePy==1.3
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
-proto-plus==1.24.0
-protobuf==4.25.5
-psutil @ file:///work/perseverance-python-buildout/croot/psutil_1698863411559/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+propcache==0.2.0
+protobuf==5.28.3
+psutil==6.1.0
+py_rust_stemmers==0.1.3
 pyannote.audio==3.1.1
 pyannote.core==5.0.0
 pyannote.database==5.1.0
 pyannote.metrics==3.2.1
 pyannote.pipeline==3.0.1
-pyarrow==17.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pyclipper==1.3.0.post5
-pycocotools==2.0.8
+pyarrow==18.0.0
 pycparser==2.22
 pydantic==2.9.2
-pydantic-settings==2.5.2
+pydantic-settings==2.6.1
 pydantic_core==2.23.4
 pydub==0.25.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+Pygments==2.18.0
 PyJWT==2.9.0
-PyMuPDF==1.24.11
+PyMuPDF==1.24.13
 pymupdf4llm==0.0.17
 pynvml==11.5.3
-pypandoc @ file:///home/conda/feedstock_root/build_artifacts/pypandoc_1728383440030/work
-pyparsing==3.1.4
+pypandoc_binary==1.14
+pyparsing==3.2.0
 pypdf==4.3.1
-pypdfium2==4.30.0
-PyStemmer==2.2.0.3
-pytesseract==0.3.13
 python-dateutil==2.8.2
 python-docx==1.1.2
 python-dotenv==1.0.1
-python-engineio==4.9.1
-python-iso639==2024.4.27
+python-engineio==4.10.1
+python-iso639==2024.10.22
 python-magic==0.4.27
 python-multipart==0.0.9
 python-oxmsg==0.0.1
 python-pptx==1.0.2
 python-socketio==5.11.4
 pytorch-lightning==2.4.0
-pytorch-metric-learning==2.6.0
+pytorch-metric-learning==2.7.0
 pytz==2024.2
 PyYAML==6.0.2
-pyzmq @ file:///croot/pyzmq_1705605076900/work
-qdrant-client==1.11.3
+qdrant-client==1.12.1
 RAGatouille==0.0.8.post4
-RapidFuzz==3.10.0
-rapidocr-onnxruntime==1.3.25
-regex==2024.9.11
+RapidFuzz==3.10.1
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
-rich==13.9.0
-rsa==4.9
+rich==13.9.4
 ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.8
+ruamel.yaml.clib==0.2.12
 safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
 semver==3.0.2
-sentence-transformers==3.2.1
+sentence-transformers==2.7.0
 sentencepiece==0.2.0
 setuptools==75.1.0
-shapely==2.0.6
 shellingham==1.5.4
-simple-websocket==1.0.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+simple-websocket==1.1.0
+six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
-snowballstemmer==2.2.0
 sortedcontainers==2.4.0
 soundfile==0.12.1
 soupsieve==2.6
 soxr==0.5.0.post1
-speechbrain==1.0.1
+speechbrain==1.0.2
 SQLAlchemy==2.0.35
 srsly==2.4.8
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-starlette==0.37.2
+starlette==0.41.2
 striprtf==0.0.26
 sympy==1.13.3
 syncer==2.0.3
 tabulate==0.9.0
 tenacity==8.5.0
 tensorboardX==2.6.2.2
-tesseract==0.1.3
 threadpoolctl==3.5.0
-tiktoken==0.7.0
-timm==1.0.9
-tokenizers==0.20.1
-tomli==2.0.1
-torch==2.2.2+cu121
+tiktoken==0.8.0
+tokenizers==0.20.3
+tomli==2.0.2
+torch==2.2.2
 torch-audiomentations==0.11.1
 torch_pitch_shift==1.2.5
-torchaudio==2.2.2+cu121
-torchmetrics==1.4.3
-torchvision==0.17.2+cu121
-tornado @ file:///croot/tornado_1718740109488/work
-tqdm==4.66.5
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-transformers==4.46.1
-triton==3.0.0
-typer==0.12.5
+torchaudio==2.2.2
+torchmetrics==1.5.2
+tqdm==4.67.0
+transformers==4.46.2
+typer==0.13.0
 typing-inspect==0.9.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
+typing_extensions==4.12.2
 tzdata==2024.2
 ujson==5.10.0
-unstructured==0.15.14
-unstructured-client==0.25.9
-unstructured-inference==0.7.36
-unstructured.pytesseract==0.3.13
-uptrace==1.26.0
+unstructured==0.16.5
+unstructured-client==0.27.0
+uptrace==1.27.0
 urllib3==2.2.3
 uvicorn==0.25.0
-uvloop==0.20.0
 voyager==2.0.9
 watchfiles==0.20.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-websockets==13.1
-Werkzeug==3.0.4
+webencodings==0.5.1
+Werkzeug==3.1.3
 wheel==0.44.0
 whisperx==3.1.5
 wrapt==1.16.0
 wsproto==1.2.0
 XlsxWriter==3.2.0
 xxhash==3.5.0
-yarl==1.13.1
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1726248574750/work
+yarl==1.17.1
+zipp==3.20.2
