--- a/compose_projects/chainlit_compose/dockerfile
+++ b/compose_projects/chainlit_compose/dockerfile
@@ -40,6 +40,14 @@ FROM python:3.12-slim
 # Installer curl
 RUN apt-get update && apt-get install -y curl && apt-get clean
 RUN apt-get update && apt-get install -y git && apt-get clean
+RUN apt-get update && apt-get install -y iputils-ping
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    g++ \
+    gcc \
+    cmake \
+    make \
+    && rm -rf /var/lib/apt/lists/*
 #RUN apt-get update && apt-get install -y \
 #    python3.12 \
 #    python3.12-venv \
