--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ python-pptx = "^1.0.2"
 llama-index-llms-langchain = "^0.5.0"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
 aiofiles = "23.1.0"
+portkey-ai = "^1.9.7"
 
 
 [tool.poetry.group.dev.dependencies]
