integrating Lucie in the RAG Pipeline

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -2,19 +2,12 @@ defaults:
   - chunker: semantic_splitter
   - retriever: multiQuery
   - rag: ChatBotRag
+  - llm: llama # lucie
 
 embedder:
   type: huggingface
   model_name: HIT-TMG/KaLM-embedding-multilingual-mini-v1
   # powerful multilingual model => More language => token's decomposed heavily => More to embed => this model is better than Alibaba NLP models
-
-llm:
-  base_url: https://chat.ai.linagora.exaion.com/v1
-  name: meta-llama-31-8b-it
-  portkey_api_key: ${oc.env:PORTKEY_API_KEY}
-  virtual_key: ${oc.env:VIRTUAL_KEY}
-  max_tokens: 1024
-  temperature: 0.0
 
 vectordb:
   host: localhost
