--- a/.hydra_config/llm/base.yaml
+++ b/.hydra_config/llm/base.yaml
@@ -1,5 +1,5 @@
-max_tokens: 2048
+max_tokens: 8192
 temperature: 0.0
 timeout: 60
-max_retries: 2
-frequency_penalty: 0.2
+# max_retries: 2
+# frequency_penalty: 0.2
