--- a/.hydra_config/llm/llama.yaml
+++ b/.hydra_config/llm/llama.yaml
@@ -1,6 +1,6 @@
 defaults:
   - base
 
-base_url: https://chat.ai.linagora.exaion.com/v1
+base_url: ${oc.env:BASE_URL}
 model: meta-llama-31-8b-it
 api_key: ${oc.env:API_KEY}
