--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -17,7 +17,7 @@ vectordb:
   host: localhost
   port: 6333
   connector_name: qdrant
-  collection_name: vdb_1st_test # vdb_tuto # 
+  collection_name: vdb_test # vdb_tuto # 
   hybrid_mode: true
 
 reranker:
