--- a/.hydra_config/llm/lucie.yaml
+++ b/.hydra_config/llm/lucie.yaml
@@ -1,6 +1,6 @@
 defaults:
   - base
 
-base_url: https://chat.ai.linagora.exaion.com/v1/
+base_url: ${oc.env:BASE_URL}
 name: lucie-7b
 api_key: ${oc.env:API_KEY}
