--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,27 @@
-[tool.poetry]
+[project]
 name = "ragondin"
 version = "0.1.0"
-description = ""
-authors = ["Ahmath-GADJI <ahmathgadji27@gmail.com>\",\"MChrys <chrys.beltran@outlook.fr>"]
+description = "Add your description here"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-langchain-core = "^0.3.37"
-langchain-community = "^0.3.18"
-langchain-openai = "^0.3.6"
-langchain-qdrant = "^0.2.0"
-langchain-experimental = "^0.3.4"
-loguru = "^0.7.3"
-chainlit = "^2.2.1"
-pyyaml = "^6.0.2"
-ragatouille = "^0.0.9"
-hydra-core = "^1.3.2"
-python-dotenv = "^1.0.1"
-docling = "^2.23.0"
-pymupdf4llm = "^0.0.17"
-aiopath = "^0.7.7"
-psutil = "^7.0.0"
-llama-index-llms-langchain = "^0.6.0"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.12"
+dependencies = [
+    "aiopath>=0.7.7",
+    "chainlit>=2.2.1",
+    "docling>=2.24.0",
+    "einops>=0.8.1",
+    "fastembed-gpu>=0.4.2",
+    "hydra-core>=1.3.2",
+    "langchain-community>=0.3.18",
+    "langchain-core>=0.3.39",
+    "langchain-experimental>=0.3.4",
+    "langchain-openai>=0.3.7",
+    "langchain-qdrant>=0.2.0",
+    "llama-index-llms-langchain>=0.6.0",
+    "loguru>=0.7.3",
+    "psutil>=7.0.0",
+    "pydub>=0.25.1",
+    "pymupdf4llm>=0.0.17",
+    "python-dotenv>=1.0.1",
+    "pyyaml>=6.0.2",
+    "ragatouille>=0.0.9",
+]
