small changes docker

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -14,8 +14,8 @@ embedder:
   # powerful multilingual model => More language => token's decomposed heavily => More to embed => this model is better than Alibaba NLP models
 
 vectordb:
-  host: qdrant
-  port: 6333
+  host: ${oc.env:QDRANT_HOST, qdrant}
+  port: ${oc.env:QDRANT_PORT, 6333}
   connector_name: qdrant
   collection_name: vdb_test # vdb_tuto # 
   hybrid_mode: true
