--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ services:
   qdrant:
     image: qdrant/qdrant
     volumes:
-      - ./qdrant_storage:/qdrant/storage:z
+      - qdrant_storage:/qdrant/storage #./qdrant_storage:/qdrant/storage:z
+
   chainlit-app:
     build: 
       dockerfile: Dockerfile
@@ -24,3 +25,6 @@ services:
             - driver: nvidia
               count: all 
               capabilities: [gpu]
+
+volumes:
+  qdrant_storage:
