--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,21 @@
-API_KEY=''
-BASE_URL=''
+# LLM
+BASE_URL=""
+API_KEY=""
 
-ROOT_DIR=./
+# PATH VARS
+ROOT_DIR=.
+BASE_DIR=${ROOT_DIR}/components
+PROMPTS_DIR=${BASE_DIR}/prompts2
 
+# FASTAPI
+APP_PORT=8083
+APP_HOST='0.0.0.0'
+
+# Huggingface vars
 HF_HOME=${ROOT_DIR}/model_weights
 HF_HUB_CACHE=${HF_HOME}/hub
 
-BASE_DIR=${ROOT_DIR}/src/components
-PROMPTS_DIR=${BASE_DIR}/prompts
-
-host=172.17.0.2
-port=6333
+# Qdrant
+QDRANT_HOST=localhost
+QDRANT_PORT=6333
+COLLECTION_NAME='vdb_test'
