Quick fixes and logging conformance
- Fixed hydra warning with _self_ in hydra defaults
- Reimplemented langchain_huggingface for HuggingFaceEmbeddings deprecation in langchain_community
- Consolidated loguru usage (removed random prints and moved useful ones to loguru)
- Added default hydra version to initialization (to silence warning)
- added .vscode to gitignore

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -1,4 +1,5 @@
 defaults:
+  - _self_  # TODO: Silences the hydra version migration warning (PLEASE REVIEW FOR BREAKING CHANGES)
   - chunker: recursive_splitter #semantic_splitter
   - retriever: multiQuery
   - rag: ChatBotRag
