reorganize Docker & repo struct

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -33,9 +33,8 @@ verbose:
   level: INFO
 
 paths:
-  root_dir: ${oc.env:ROOT_DIR}
-  base_dir: ${oc.env:BASE_DIR}
-  prompts_dir: ${oc.env:PROMPTS_DIR}
+  prompts_dir: ${oc.env:PROMPTS_DIR, ../prompts}
+  data_dir: ${oc.env:DATA_DIR, ../data}
 
 prompt:
   rag_sys_pmpt: rag_sys_prompt_template.txt # rag_sys_pmpt_tmpl_ifa.txt
