uv sync outside of code folder

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,20 +9,14 @@ services:
     volumes:
       - ./model_weights:/app/model_weights
       - ./data:/app/data # PDF data for RAG
-    
     ports:
-      - "${APP_PORT}:${APP_PORT}"
+      - "${APP_PORT}:8080"
     env_file:
       - .env
     
     depends_on:
       - qdrant
 
-    
-    command: >
-      bash -c "
-        uv run uvicorn api:app --host ${APP_HOST} --port ${APP_PORT}
-      "
     deploy:
       resources:
         reservations:
