--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -15,11 +15,10 @@ embedder:
   # powerful multilingual model => More language => token's decomposed heavily => More to embed => this model is better than Alibaba NLP models
 
 vectordb:
-  host: ${oc.env:QDRANT_HOST, qdrant}
-  port: ${oc.env:QDRANT_PORT, 6333}
-  connector_name: qdrant
-  collection_name: ${oc.env:COLLECTION_NAME, vdb_test}
-  hybrid_mode: true
+  host: ${oc.env:VDB_HOST, milvus}
+  port: ${oc.env:VDB_PORT, 19530}
+  connector_name: ${oc.env:VDB_CONNECTOR_NAME, milvus}
+  default_collection_name: vdb_test
 
 reranker:
   model_name: jinaai/jina-colbert-v2
@@ -30,7 +29,7 @@ grader:
 
 verbose:
   verbose: true
-  level: DEBUG   # https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
+  level: INFO
 
 paths:
   prompts_dir: ${oc.env:PROMPTS_DIR, ../prompts}
