--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,20 @@
+include:
+  - vdb/${VDB_HOST}.yaml
 services:
-  qdrant:
-    image: qdrant/qdrant
-    volumes:
-      - qdrant_storage:/qdrant/storage #./qdrant_storage:/qdrant/storage:z
-
   chainlit-app:
     build: 
       dockerfile: Dockerfile
     volumes:
       - ./model_weights:/app/model_weights
       - ./data:/app/data # PDF data for RAG
-      - ./ragondin:/app/ragondin
+      - ./ragondin:/app/ragondin # For dev mode
     ports:
       - "${APP_PORT}:8080"
     env_file:
       - .env
     
     depends_on:
-      - qdrant
-
+      - ${VDB_HOST}
     deploy:
       resources:
         reservations:
@@ -26,6 +22,3 @@ services:
             - driver: nvidia
               count: all 
               capabilities: [gpu]
-
-volumes:
-  qdrant_storage:
