--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "llama-index-llms-langchain>=0.6.0",
     "loguru>=0.7.3",
     "marker-pdf>=0.2.17",
+    "openai>=1.64.0",
     "psutil>=7.0.0",
     "pydub>=0.25.1",
     "pymupdf4llm>=0.0.17",
