Loader for .doc and pptx

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -43,10 +43,11 @@ prompt:
 loader:
   image_captioning: true
   file_loaders:
-    pdf: DoclingLoader
-    docx: MarkItDownLoader
-    doc: CustomDocLoader
-    odt: CustomDocLoader
+    # pdf: DoclingLoader
+    # docx: MarkItDownLoader
+    # doc: MarkItDown_DocLoader
+    pptx: PPTXLoader
+    # odt: CustomDocLoader
 
 semaphore:
   llm_semaphore: ${oc.decode:${oc.env:LLM_SEMAPHORE, 10}}
