--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,4 +28,6 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pyyaml>=6.0.2",
     "ragatouille>=0.0.9",
+    "spire-doc>=13.1.0",
+    "markitdown>=0.0.2"
 ]
