Loader for .doc and pptx

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -44,9 +44,10 @@ loader:
   image_captioning: true
   file_loaders:
     pdf: DoclingLoader
-    docx: CustomDocLoader
-    doc: CustomDocLoader
-    odt: CustomDocLoader
+    docx: MarkItDownLoader
+    doc: MarkItDown_DocLoader
+    pptx: PPTXLoader
+    # odt: CustomDocLoader
 
 semaphore:
   llm_semaphore: ${oc.decode:${oc.env:LLM_SEMAPHORE, 10}}
