Config for cpu support

--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -23,10 +23,10 @@ insertion:
 
 reranker:
   model_name: jinaai/jina-colbert-v2
-  top_k: 5
+  top_k: 4 # 8
 
 grader:
-  grade_documents: true
+  grade_documents: false
 
 verbose:
   verbose: true
