--- a/.hydra_config/chunker/recursive_splitter.yaml
+++ b/.hydra_config/chunker/recursive_splitter.yaml
@@ -2,7 +2,7 @@
 name: recursive_splitter
 chunk_size: 1500
 chunk_overlap: 300
-contextual_retrieval: true
+contextual_retrieval: false
 
 
 # https://chat.deepseek.com/a/chat/s/28913c5d-1f62-40b0-9247-4655994fe16b
