Refacto + Readme updated

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,36 @@
-# LLM
-BASE_URL=''
-API_KEY=''
+# LLM settings
+BASE_URL=
+API_KEY=
+MODEL=''
 
+# VLM settings
+VLM_BASE_URL=
+VLM_API_KEY=
+VLM_MODEL=
 
 # App
-APP_PORT=8080
+APP_PORT=8083
 APP_HOST=0.0.0.0
 
+# RAY
+RAY_DEDUP_LOGS=0
 
-# Vector db
+# Vector db VDB Milvus
 VDB_HOST=milvus
 VDB_PORT=19530
 VDB_CONNECTOR_NAME=milvus
 
+# RETRIEVER
+CONTEXT_RETRIEVAL=true
+RETRIEVER_TOP_K=15
+
+# EMBEDDER
+EMBEDDER_MODEL=HIT-TMG/KaLM-embedding-multilingual-mini-v1
+
+# RERANKER
+RERANKER_MODEL=jinaai/jina-colbert-v2
+RERANKER_ENABLED=true
+RERANKER_TOP_K=8
 
 # Prompts
 PROMPTS_DIR=../prompts/example2
