--- a/.hydra_config/chunker/semantic_splitter.yaml
+++ b/.hydra_config/chunker/semantic_splitter.yaml
@@ -1,5 +1,5 @@
-# This configuration is for the semantic splitter
+defaults:
+  - base
 name: semantic_splitter
 min_chunk_size: 1000
 breakpoint_threshold_amount: 95
-contextual_retrieval: true
