Adding env vars & README updated

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-# LLM settings
+# LLM
 BASE_URL=
 API_KEY=
-MODEL=''
+MODEL=
 
-# VLM settings
+# VLM
 VLM_BASE_URL=
 VLM_API_KEY=
 VLM_MODEL=
 
 # App
-APP_PORT=8083
+APP_PORT=8082
 APP_HOST=0.0.0.0
 
 # RAY
@@ -21,8 +21,8 @@ VDB_PORT=19530
 VDB_CONNECTOR_NAME=milvus
 
 # RETRIEVER
-CONTEXT_RETRIEVAL=true
-RETRIEVER_TOP_K=15
+CONTEXTUAL_RETRIEVAL=false
+RETRIEVER_TOP_K=5
 
 # EMBEDDER
 EMBEDDER_MODEL=HIT-TMG/KaLM-embedding-multilingual-mini-v1
@@ -30,7 +30,11 @@ EMBEDDER_MODEL=HIT-TMG/KaLM-embedding-multilingual-mini-v1
 # RERANKER
 RERANKER_MODEL=jinaai/jina-colbert-v2
 RERANKER_ENABLED=true
-RERANKER_TOP_K=8
+RERANKER_TOP_K=4
 
 # Prompts
 PROMPTS_DIR=../prompts/example2
+COLBERT_LOAD_TORCH_EXTENSION_VERBOSE=True
+
+# Loaders
+PDFLoader=DoclingLoader
