quick fix in docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ x-ragondin: &ragondin_template
     - ./ragondin:/app/ragondin # For dev mode
 
   ports:
-    - "${APP_PORT}:${APP_PORT}"
+    - "${APP2_PORT}:${APP_PORT}"
     - 8265:8265 # for ray
   env_file:
     - .env
