quick fix in docker

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ VLM_MODEL=
 VLM_SEMAPHORE=10
 
 # App
-APP2_PORT=8081
-APP_PORT=8083
+APP2_PORT=8081 
+APP_PORT=8083 # do not change
 APP_HOST=0.0.0.0
 
 # RAY
